update be and UI of Shift Management