@@ -1,6 +1,7 @@
 package com.example.hrm.service;
 
 import com.example.hrm.dto.request.WorkScheduleTemplateRequest;
+import com.example.hrm.dto.response.ShiftPatternResponse;
 import com.example.hrm.dto.response.WorkScheduleTemplateResponse;
 import com.example.hrm.entity.*;
 import com.example.hrm.mapper.WorkScheduleTemplateMapper;
@@ -10,12 +11,14 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.Setter;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -29,32 +32,77 @@ public class WorkScheduleTemplateService {
     private final ShiftRepository shiftRepository;
     private final WorkScheduleRepository scheduleRepository;
     private final WorkScheduleTemplateMapper mapper;
+    private final PermissionChecker permissionChecker;
+
+
+    private String validateAndCleanShiftPattern(String rawPatternJson) {
+        try {
+            ObjectMapper mapper = new ObjectMapper();
+            List<ShiftPatternItem> items = mapper.readValue(rawPatternJson, new TypeReference<>() {});
+
+            List<ShiftPatternItem> cleaned = items.stream()
+                    .collect(Collectors.collectingAndThen(
+                            Collectors.toMap(
+                                    item -> item.getDay() + "-" + item.getShiftId(),
+                                    item -> item,
+                                    (existing, replacement) -> existing
+                            ),
+                            map -> new ArrayList<>(map.values())
+                    ));
+
+            return mapper.writeValueAsString(cleaned);
+        } catch (Exception e) {
+            throw new RuntimeException("Invalid shiftPattern JSON");
+        }
+    }
 
     public WorkScheduleTemplateResponse createTemplate(WorkScheduleTemplateRequest request) {
-        WorkScheduleTemplate template = mapper.toEntity(request);
+        permissionChecker.checkAdminOrHrRole();
 
         Department dep = departmentRepository.findById(request.getDepartmentId())
                 .orElseThrow(() -> new RuntimeException("Department not found"));
+
+        if (dep.getName().equalsIgnoreCase("Human Resources Department")
+                && permissionChecker.isCurrentUserHr()) {
+            throw new RuntimeException("HR không được tạo template cho phòng Human Resources Department");
+        }
+
+        WorkScheduleTemplate template = mapper.toEntity(request);
         template.setDepartment(dep);
 
         User creator = userRepository.findById(request.getCreatedById())
                 .orElseThrow(() -> new RuntimeException("User not found"));
         template.setCreatedBy(creator);
 
+        template.setShiftPattern(validateAndCleanShiftPattern(request.getShiftPattern()));
         template.setCreatedAt(LocalDateTime.now());
 
         return mapper.toResponse(templateRepository.save(template));
     }
 
+
     public WorkScheduleTemplateResponse updateTemplate(Integer id, WorkScheduleTemplateRequest request) {
+        permissionChecker.checkAdminOrHrRole();
+
         WorkScheduleTemplate template = templateRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Template not found"));
+
+        if (template.getDepartment().getName().equalsIgnoreCase("Human Resources Department")
+                && permissionChecker.isCurrentUserHr()) {
+            throw new RuntimeException("HR không được cập nhật template của phòng Human Resources Department");
+        }
 
         mapper.updateEntityFromRequest(request, template);
 
         if (request.getDepartmentId() != null) {
             Department dep = departmentRepository.findById(request.getDepartmentId())
                     .orElseThrow(() -> new RuntimeException("Department not found"));
+
+            if (dep.getName().equalsIgnoreCase("Human Resources")
+                    && permissionChecker.isCurrentUserHr()) {
+                throw new RuntimeException("HR không được cập nhật template sang phòng Human Resources");
+            }
+
             template.setDepartment(dep);
         }
 
@@ -64,21 +112,99 @@ public class WorkScheduleTemplateService {
             template.setCreatedBy(creator);
         }
 
+        if (request.getShiftPattern() != null) {
+            template.setShiftPattern(validateAndCleanShiftPattern(request.getShiftPattern()));
+        }
+
         return mapper.toResponse(templateRepository.save(template));
     }
 
     public List<WorkScheduleTemplateResponse> getAllTemplates() {
-        return templateRepository.findAll().stream()
-                .map(mapper::toResponse)
-                .collect(Collectors.toList());
+        Role currentRole = permissionChecker.getCurrentUserRole();
+        List<WorkScheduleTemplate> templates;
+
+        if ("admin".equalsIgnoreCase(currentRole.getName())) {
+            templates = templateRepository.findAll();
+        } else if ("hr".equalsIgnoreCase(currentRole.getName())) {
+            templates = templateRepository.findAll().stream()
+                    .filter(t -> !t.getIsDelete()
+                            && !t.getDepartment().getName().equalsIgnoreCase("Human Resources Department"))
+                    .toList();
+        } else {
+            throw new RuntimeException("Bạn không có quyền xem template lịch làm việc");
+        }
+
+        return templates.stream()
+                .map(template -> {
+                    WorkScheduleTemplateResponse res = mapper.toResponse(template);
+
+                    try {
+                        ObjectMapper mapperJson = new ObjectMapper();
+                        List<ShiftPatternItem> pattern = mapperJson.readValue(
+                                template.getShiftPattern(), new TypeReference<>() {}
+                        );
+
+                        List<ShiftPatternResponse> detail = pattern.stream()
+                                .map(item -> {
+                                    String shiftName = shiftRepository.findById(item.getShiftId())
+                                            .map(Shift::getName)
+                                            .orElse("N/A");
+                                    return new ShiftPatternResponse(item.getDay(), item.getShiftId(), shiftName);
+                                })
+                                .toList();
+
+                        res.setShiftPatternDetail(detail);
+                    } catch (Exception e) {
+                        res.setShiftPatternDetail(new ArrayList<>());
+                    }
+
+                    return res;
+                })
+                .toList();
     }
 
     public WorkScheduleTemplateResponse getTemplateById(Integer id) {
         WorkScheduleTemplate template = templateRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Template not found"));
-        return mapper.toResponse(template);
+
+        Role currentRole = permissionChecker.getCurrentUserRole();
+
+        if ("hr".equalsIgnoreCase(currentRole.getName())
+                && template.getDepartment().getName().equalsIgnoreCase("Human Resources Department")) {
+            throw new RuntimeException("HR không có quyền xem template của phòng Human Resources Department");
+        }
+
+        if (!template.getIsDelete() || "admin".equalsIgnoreCase(currentRole.getName())) {
+            WorkScheduleTemplateResponse res = mapper.toResponse(template);
+
+            try {
+                ObjectMapper mapperJson = new ObjectMapper();
+                List<ShiftPatternItem> pattern = mapperJson.readValue(
+                        template.getShiftPattern(), new TypeReference<>() {}
+                );
+
+                List<ShiftPatternResponse> detail = pattern.stream()
+                        .map(item -> {
+                            String shiftName = shiftRepository.findById(item.getShiftId())
+                                    .map(Shift::getName)
+                                    .orElse("N/A");
+                            return new ShiftPatternResponse(item.getDay(), item.getShiftId(), shiftName);
+                        })
+                        .toList();
+
+                res.setShiftPatternDetail(detail);
+            } catch (Exception e) {
+                res.setShiftPatternDetail(new ArrayList<>());
+            }
+
+            return res;
+        } else {
+            throw new RuntimeException("Bạn không có quyền xem template đã bị xóa");
+        }
     }
 
+
+    @PreAuthorize("hasRole('admin')")
     public void deleteTemplate(Integer id) {
         WorkScheduleTemplate template = templateRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Template not found"));
@@ -86,6 +212,7 @@ public class WorkScheduleTemplateService {
         templateRepository.save(template);
     }
 
+    @PreAuthorize("hasRole('admin')")
     public void restoreTemplate(Integer id) {
         WorkScheduleTemplate template = templateRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Template not found"));
@@ -94,10 +221,16 @@ public class WorkScheduleTemplateService {
     }
 
     public void applyTemplate(Integer templateId, LocalDate startDate, LocalDate endDate, boolean overwrite) {
+        permissionChecker.checkAdminOrHrRole();
         WorkScheduleTemplate template = templateRepository.findById(templateId)
                 .orElseThrow(() -> new RuntimeException("Template not found"));
 
-        List<EmployeeRecord> employees = employeeRepository.findAllByDepartmentAndIsDeleteFalse(template.getDepartment());
+        if (permissionChecker.isCurrentUserHr()
+                && template.getDepartment().getName().equalsIgnoreCase("Human Resources Department")) {
+            throw new RuntimeException("HR không được áp dụng template cho phòng Human Resources Department");
+        }
+
+        List<EmployeeRecord> employees = employeeRepository.findActiveByDepartmentId(Math.toIntExact(template.getDepartment().getId()));
         if (employees.isEmpty()) return;
 
         ObjectMapper mapperJson = new ObjectMapper();
@@ -119,29 +252,30 @@ public class WorkScheduleTemplateService {
                             .orElseThrow(() -> new RuntimeException("Shift not found"));
 
                     for (EmployeeRecord emp : employees) {
-                        WorkSchedule existing = scheduleRepository
-                                .findByEmployeeAndShiftAndWorkDateAndIsDeleteFalse(emp, shift, date)
-                                .orElse(null);
+                        Optional<WorkSchedule> existingOpt = scheduleRepository
+                                .findByEmployeeAndShiftAndWorkDateAndIsDeleteFalse(emp, shift, date);
 
-                        if (existing == null) {
+                        if (existingOpt.isPresent()) {
+                            WorkSchedule existing = existingOpt.get();
+                            if (overwrite) {
+                                existing.setStatus(WorkSchedule.Status.planned);
+                                existing.setUpdatedAt(LocalDateTime.now());
+                            }
+                        } else {
                             WorkSchedule ws = WorkSchedule.builder()
                                     .employee(emp)
                                     .shift(shift)
                                     .workDate(date)
                                     .status(WorkSchedule.Status.planned)
                                     .createdAt(LocalDateTime.now())
+                                    .isDelete(false)
                                     .build();
                             schedules.add(ws);
-                        } else if (overwrite) {
-                            existing.setStatus(WorkSchedule.Status.planned);
-                            existing.setUpdatedAt(LocalDateTime.now());
-                            schedules.add(existing);
                         }
                     }
                 }
             }
         }
-
         scheduleRepository.saveAll(schedules);
     }
 
